--- a/index.html
+++ b/index.html
@@ -43,8 +43,8 @@
 
   <script>
     const statusDiv = document.getElementById("status");
-    const CHECK_URL = "https://tracuu-backend.onrender.com/ping-vietnamnet"; // Đổi thành URL thật của backend nếu cần
-    const REDIRECT_URL = "https://tracuu-backend.onrender.com/"; // Trang chính sau khi backend sẵn sàng
+    const CHECK_URL = "https://khodeazota.onrender.com/ping-vietnamnet"; // Đổi thành URL thật của backend nếu cần
+    const REDIRECT_URL = "https://khodeazota.onrender.com/"; // Trang chính sau khi backend sẵn sàng
 
     const checkBackend = () => {
       fetch(CHECK_URL)
