--- a/index.html
+++ b/index.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html lang="vi">
 <head>
@@ -43,8 +42,8 @@
 
   <script>
     const statusDiv = document.getElementById("status");
-    const CHECK_URL = "https://khodeazota.onrender.com/ping-vietnamnet"; // Đổi thành URL thật của backend nếu cần
-    const REDIRECT_URL = "https://khodeazota.onrender.com/"; // Trang chính sau khi backend sẵn sàng
+    const CHECK_URL = "https://khodeazota.onrender.com/ping-vietnamnet";
+    const REDIRECT_URL = "https://khodeazota.onrender.com/";
 
     const checkBackend = () => {
       fetch(CHECK_URL)
