--- a/index.html
+++ b/index.html
@@ -68,12 +68,31 @@
 
   <script>
     const REDIRECT_URL = "https://khodeazota.onrender.com/";
-    const DELAY_TIME = 3000; // Thời gian chờ trước khi chuyển hướng (3000ms = 3 giây)
+    const DELAY_TIME = 3000;
 
-    // Hàm này sẽ tự động chạy sau một khoảng thời gian
-    setTimeout(() => {
-      window.location.href = REDIRECT_URL;
-    }, DELAY_TIME);
+    function checkServerStatus() {
+      fetch(REDIRECT_URL, { method: 'HEAD' })
+        .then(response => {
+          if (response.ok) {
+            setTimeout(() => {
+              window.location.href = REDIRECT_URL;
+            }, DELAY_TIME);
+          } else {
+            showError();
+          }
+        })
+        .catch(() => {
+          showError();
+        });
+    }
+
+    function showError() {
+      document.querySelector(".spinner").style.display = "none";
+      document.getElementById("status").textContent = "❌ Không thể kết nối đến máy chủ. Vui lòng thử lại sau.";
+      document.getElementById("status").style.color = "#ffcccc";
+    }
+
+    checkServerStatus();
   </script>
 </body>
 </html>
